<resources>
    <string name="app_name">MaterialDesignDemo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="person">person</string>
    <string name="radio">radio</string>
    <string name="headset">headset</string>
    <string name="user">user</string>
    <string name="Nav_View_Open">Navigation View Open</string>
    <string name="Nav_View_close">Navigation View Closes</string>
    <string name="contact">Contact</string>
    <string name="loginpageimage">loginPageImage</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="share_to_facebook">Share To Facebook</string>
    <string name="share_to_instagram">Share To Instagram</string>
    <string name="share_to_whatsapp">Share To Whatsapp</string>
    <string name="share_to_skype">Share To Skype</string>
</resources>
