<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="370dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="450dp"
        android:onClick="fromLogin"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:rippleColor="@color/rippleColor" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
